# foodie

./: .env.example  .gitignore  CLAUDE.md  ENTERPRISE_OPTIMIZATION.md  IMPLEMENTATION.md  KAKAO_OAUTH_DESIGN.md  KAKAO_OAUTH_IMPLEMENTATION.md  README.md  amplify.yml  codegen.yml  docker-compose.yml  iframe.html  index.html  index.json  package.json  pnpm-lock.yaml  project.json  vite.config.ts  vitest.config.ts
.storybook/: main.js  preview.js
assets/: Avatar-Bxq-CCgv.js  Avatar-CVT50AZw.css  Avatar.stories-BHkUww5y.js  Button-BtUlYdzB.js  Button-CCiM9AoC.css  Button.stories-ByvVYo-J.js  Card-DHKJKPq5.css  Card.stories-xdCqOMIB.js  Color-YHDXOIA2-qD5Q6DC0.js  Colors-C5Pc1wB4.css  Colors.stories-B33-JKle.js  DocsRenderer-CFRXHY34-DG0RvfuK.js  FeedCard-BXRkseMT.css  FeedCard.stories-PE1k3-3k.js  LoginForm-BAvR1YOo.css  TextArea-DrQ9YIRw.css  (+14 more)
backend/: .env.example  Cargo.toml  README.md  deploy.sh  frontend-integration.md  sample_queries.graphql  schema.sql  setup-ec2.sh
backend/migrations/: 004_kakao_oauth.sql
backend/src/: main.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/auth/oauth/: encryption.rs  kakao.rs  mod.rs  state_manager.rs
backend/src/cache/: friend_cache.rs  mod.rs
backend/src/db/: mod.rs
backend/src/models/: audit_log.rs  comment.rs  friend_request.rs  friendship.rs  mod.rs  oauth_provider.rs  post.rs  user.rs
backend/src/schema/: mod.rs  mutation.rs  query.rs
backend/src/search/: client.rs  mod.rs  service.rs
backend/src/session/: middleware.rs  mod.rs  redis_store.rs
backend/src/storage/: image_processor.rs  mod.rs  s3_client.rs
(+90 files in other folders)
