[package]
name = "foodie_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# GraphQL
async-graphql = "7.0"
async-graphql-actix-web = "7.0"

# Web Framework
actix-web = "4.9"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.3"

# Redis (Session Management)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Elasticsearch (Search)
elasticsearch = "8.15.0-alpha.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
